--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: workflow
+name: main
 
 on:
   push:
@@ -7,9 +7,6 @@ on:
   pull_request:
     branches:
     - main
-  schedule:
-    # 日本時間で毎晩 21 時
-    - cron: '0 12 * * *'
 
 jobs:
   build:
@@ -21,3 +18,7 @@ jobs:
         ruby-version: 3.0.0
         bundler-cache: true
     - run: ./bin/test.sh
+    - run: curl https://cli-assets.heroku.com/install.sh | sh
+    - run: ./bin/deploy.sh
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
