Heroku へのデプロイ設定を修正

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,3 +22,8 @@ jobs:
     - run: ./bin/deploy.sh
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+    - uses: akhileshns/heroku-deploy@v3.10.9
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: ruby-janken
+        heroku_email: ${{ secrets.HEROKU_EMAIL }}
