--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,4 +23,4 @@ jobs:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
         heroku_app_name: ruby-janken
         heroku_email: ${{ secrets.HEROKU_EMAIL }}
-        dontuseforce: true
+        dontuseforce: 1
